Fix weird overflow with multipage and a few others

--- a/app/styles/_base.styl
+++ b/app/styles/_base.styl
@@ -21,6 +21,7 @@ body
 h1, h2, h3, h4, h5, h6
   padding 0 15px
   font-weight 300
+  text-align center
 
 h1  font-size 225%
 h2  font-size 200%
